objects/Session_Object_Data__c/Session_Object_Data__c.object-meta.xml
<CustomObject>
    <label>Session Object Data</label>
    <nameField>
        <label>Session Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Session Object Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>