objects/Session_Object_Data__c/fields/Json_Data_2__c.field-meta.xml
<CustomField>
    <fullName>Json_Data_2__c</fullName>
    <label>Json Data 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>