objects/Session_Object_Data__c/fields/Json_Data__c.field-meta.xml
<CustomField>
    <fullName>Json_Data__c</fullName>
    <label>Json Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>