objects/Session_Object_Data__c/fields/Object_Key__c.field-meta.xml
<CustomField>
    <fullName>Object_Key__c</fullName>
    <externalId>true</externalId>
    <label>Object Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>