objects/Session_Object_Data__c/fields/Sfdc_Sid__c.field-meta.xml
<CustomField>
    <fullName>Sfdc_Sid__c</fullName>
    <label>Sfdc Sid</label>
    <length>150</length>
    <type>Text</type>
</CustomField>