objects/Session_Object_Data__c/fields/Update_Time__c.field-meta.xml
<CustomField>
    <fullName>Update_Time__c</fullName>
    <label>Update Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>